Code improvement.
git-svn-id: file:///root/var/svn/aranea/branches/change_873@5229 baba0d3d-6527-0410-ba98-ffd8059025de